<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory android:title="@string/category_animation_options">
        <CheckBoxPreference 
		    android:key="animation_enable"
    		android:defaultValue="true"
		    android:title="@string/animation_enable" 
		    android:summary="@string/animation_enable_summary"
            />
        
        <ListPreference
	        android:defaultValue="1"
	        android:title="@string/animation_style" 
	        android:dialogTitle="@string/animation_style"
            android:summary="@string/animation_style_summary" 
	        android:entries="@array/animation_styl"
	        android:entryValues="@array/animation_stylValues"
	        android:key="animationStyle"
	        android:dependency="animation_enable"
	        />
        <EditTextPreference
		    android:key="animation_delay"
    		android:defaultValue="50"
		    android:title="@string/animation_delay" 
    		android:dialogTitle="@string/animation_delay"
		    android:inputType="number"
		    android:summary="@string/animation_delay_summary"
	        android:dependency="animation_enable"
         	/>
        <EditTextPreference
		    android:key="animation_delay_level"
    		android:defaultValue="2500"
		    android:title="@string/animation_delay_level" 
    		android:dialogTitle="@string/animation_delay_level"
		    android:inputType="number"
		    android:summary="@string/animation_delay_level_summary"
	        android:dependency="animation_enable"
         	/>
 	</PreferenceCategory>>

   <PreferenceCategory android:title="@string/category_charge_options">
        <CheckBoxPreference 
		    android:key="charge_enable"
    		android:defaultValue="true"
		    android:title="@string/charge_enable" 
		    android:summary="@string/charge_enable_summary"
            />
        
 	</PreferenceCategory>>

  <PreferenceCategory android:title="@string/category_charge_colors">
        <CheckBoxPreference 
		    android:key="charge_colors_enable"
    		android:defaultValue="false"
		    android:title="@string/charge_colors_enable" 
		    android:summary="@string/charge_colors_enable_summary"
            />
 	    <de.geithonline.android.basics.preferences.colorpicker.ColorPickerPreference
	        android:key="charge_color"
	        android:title="@string/charge_color" 
	        android:summary="Battery --> Color on charge"
	        android:defaultValue="@integer/COLOR_GREEN"
	        android:dependency="charge_colors_enable"
	        />
        
 	</PreferenceCategory>>
 
 
        


</PreferenceScreen>