<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory android:title="@string/category_battery_options">

	    <net.margaritov.preference.colorpicker.ColorPickerPreference
	        android:key="battery_color"
	        android:title="@string/color" 
	        android:summary="Battery --> Color"
	        android:defaultValue="@integer/COLOR_WHITE"
	        />
	    <net.margaritov.preference.colorpicker.ColorPickerPreference
	        android:key="battery_color_mid"
	        android:title="Color (mid level)" 
	        android:summary="Battery --> Color (mid level)"
	        android:defaultValue="@integer/COLOR_ORANGE"
	        />
	    <net.margaritov.preference.colorpicker.ColorPickerPreference
	        android:key="battery_color_low"
	        android:title="Color (low level)" 
	        android:summary="Battery --> Color (low level)"
	        android:defaultValue="@integer/COLOR_RED"
	        />
        
        <CheckBoxPreference 
		    android:key="gradient_colors"
    		android:defaultValue="false"
		    android:title="@string/gradient_colors" 
		    android:summary="@string/gradient_colors_summary"
            />
        <CheckBoxPreference 
		    android:key="gradient_colors_mid"
    		android:defaultValue="false"
		    android:title="@string/gradient_colors_mid" 
		    android:summary="@string/gradient_colors_mid_summary"
            />
        	    	    
        <ListPreference
	        android:defaultValue="128"
	        android:title="@string/opacity" 
            android:summary="@string/opacity_summary" 
	        android:dialogTitle="Battery --> Opacity"
	        android:entries="@array/opacities"
	        android:entryValues="@array/opacitiesValues"
	        android:key="opacity"
	        />
        
        <EditTextPreference
		    android:key="threshold_mid"
    		android:defaultValue="30"
		    android:title="@string/threshold_mid" 
    		android:dialogTitle="@string/threshold_mid"
		    android:inputType="number"
		    android:summary="@string/threshold_mid_summary"
         	/>
        <EditTextPreference
		    android:key="threshold_low"
    		android:defaultValue="10"
		    android:title="@string/threshold_low" 
    		android:dialogTitle="@string/threshold_low"
		    android:inputType="number"
		    android:summary="@string/threshold_low_summary"
         	/>
    </PreferenceCategory>>
        
    <PreferenceCategory android:title="@string/category_battery_background_options">
        
	        <!-- alphaSlider="true" -->
	    <net.margaritov.preference.colorpicker.ColorPickerPreference
	        android:key="background_color"
	        android:title="@string/color" 
	        android:summary="Battery-Background --> Color"
	        android:defaultValue="@integer/COLOR_DARKGRAY"
	        />
	    
	    <ListPreference
	        android:key="background_opacity"
	        android:title="@string/opacity" 
	        android:summary="@string/opacity_summary" 
	        android:dialogTitle="Battery-Background --> Opacity"
	        android:defaultValue="128"
	        android:entries="@array/opacities"
	        android:entryValues="@array/opacitiesValues"
	        />
	    	    
	</PreferenceCategory>>


</PreferenceScreen>